# Marvie

./: .gitignore  ChibiOSF4-Debug.vgdbsettings  ChibiOSF4-Release.vgdbsettings  ChibiOSF4.sln  ChibiOSF4.vcxproj  ChibiOSF4.vcxproj.filters  MLinkServer.h  Makefile  MultipleBRSensorsReader.cpp  SingleBRSensorReader.cpp  bitbucket-pipelines.yml  board.c  board.h  build_ci.sh  chconf.h  debug.mak  deploy_ci.sh  fatfs_example.c  ffconf.h  gcc_Debug.h  gcc_Release.h  gcc_ReleaseOpt.h  halconf.h  mcuconf.h  release.mak  releaseopt.mak  stm32.mak  stm32.xml  testmain.c  upload_artifacts_ci.sh
Firmware/: .clang-format  BRSensorReader.cpp  BRSensorReader.h  CMakeLists.txt  CMakeSettings.json  ChibiOSF4-Debug.vgdbsettings  ChibiOSF4-ReleaseOpt.vgdbsettings  ChibiOSF4.vcxproj  ChibiOSF4.vcxproj.filters  ClassDiagram.cd  ClassDiagram1.cd  Crc32HW.cpp  Crc32HW.h  MLinkServer.cpp  MLinkServer.h  Makefile  MarvieDevice.cpp  MarvieDevice.h  MarviePackets.h  MarviePlatform.cpp  MarviePlatform.h  MarvieXmlConfigParsers.cpp  MarvieXmlConfigParsers.h  ModbusStack.cd  MultipleBRSensorsReader.cpp  MultipleBRSensorsReader.h  NetworkSensorReader.cpp  NetworkSensorReader.h  SingleBRSensorReader.cpp  SingleBRSensorReader.h  board.c  board.h  chconf.h  debug.mak  ffconf.h  firmware.code-workspace  gcc_Debug.h  gcc_Release.h  gcc_ReleaseOpt.h  halconf.h  (+6 more)
Firmware/Apps/Modbus/: RawModbusServer.cpp  TcpModbusServer.cpp
Firmware/Bootloader/: CMakeLists.txt
Firmware/Bootloader/Src/: bootloader.cpp  stm32f4xx_flash.h  version.h  version.h.in
Firmware/CMake/: gcc_stm32f4.cmake
Firmware/Config/: board.c  board.h  halconf.h
Firmware/Config/Bootloader/: chconf.h  halconf.h  halconf_community.h
Firmware/Config/Firmware/: lwipopts.h  mcuconf.h
Firmware/Core/: AbstractReadable.h  Assert.h  BaseDynamicThread.h  ByteRingBuffer.h  Concurrent.h  CpuUsageMonitor.cpp  DataTime.h  DataTimeService.cpp  DateTime.cpp  DateTime.h  DateTimeService.cpp  FunctorThread.h  IODevice.h  NanoList.h  NewDelete.cpp  NewDelete.h  Object.h  ObjectMemoryUtilizer.cpp  RingBuffer.h  RingIterator.h  RtcBackupRegisters.h
Firmware/Drivers/: LogicOutput.h
Firmware/Drivers/Interfaces/: Rs485.cpp  Rs485.h  SharedRs485.cpp  SharedRs485.h  Usart.cpp  Usart.h  UsartBasedDevice.cpp  UsartBasedDevice.h
Firmware/Drivers/Sensors/: AbstractSensor.cpp  AbstractSensor.h  CE301Sensor.cpp  CE301Sensor.h  SimpleSensor.cpp  SimpleSensor.h  Tem05MSensor.h  Tem104Sensor.cpp  Tem104Sensor.h  TestSensorA.cpp  TestSensorA.h  TestSensorB.cpp  TestSensorB.h
Firmware/FileSystem/: Dir.cpp  FileInfo.h  FileSystem.h
Firmware/GCC/bits/: gthr-default.h
Firmware/Lib/fatfs/: CMakeLists.txt
Firmware/Lib/lwip/: CMakeLists.txt
Firmware/Lib/modbus/: CMakeLists.txt  ModbusASCII.cpp  ModbusASCII.h  ModbusIP.cpp  ModbusIP.h  ModbusInterface.h  ModbusMaster.cpp  ModbusMaster.h  ModbusMasterHandlerHolding.h  ModbusRTU.cpp  ModbusRTU.h  ModbusSlave.cpp  ModbusSlave.h  ModbusSlaveHandlerHolding.h  ModbusTypes.h
Firmware/Lib/sha1/: CMakeLists.txt  _Sha1.cpp  _Sha1.h  sha1.cpp  sha1.h
Firmware/Lib/tinyxml2/: CMakeLists.txt
Firmware/Log/: FileLog.cpp  FileLog.h  MarvieLog.cpp  MarvieLog.h
Firmware/MarvieFirmware/: MarvieFirmware.sln
Firmware/MarvieFirmware/MarvieFirmware/: MarvieFirmware.vgdbcmake  stm32.xml
Firmware/Network/: AbstractModem.h  AbstractPppModem.cpp  AbstractPppModem.h  AbstractSocket.h  AbstractTcpServer.h  IpAddress.cpp  IpAddress.h  LwipSocketPrivate.cpp  LwipSocketPrivate.h  Modem.cpp  Modem.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h
Firmware/SensorService/: CE301Type.cpp  SensorService.cpp  SensorService.h  SimpleSensorType.cpp  TestSRSensorAType.cpp  TestSensorAType.cpp  TestSensorBType.cpp
Firmware/Src/: BRSensorReader.cpp  BRSensorReader.h  FirmwareTransferService.cpp  FirmwareTransferService.h  MLinkServer.cpp  MLinkServer.h  MarvieBackup.cpp  MarvieBackup.h  MarvieDevice.cpp  MarvieDevice.h  MarviePackets.h  MarviePlatform.h  MarviePlatform.h.in  MarvieXmlConfigParsers.cpp  MarvieXmlConfigParsers.h  MultipleBRSensorsReader.cpp  NetworkSensorReader.cpp  Q.hpp  SingleBRSensorReader.cpp  main.cpp  stm32f4xx_flash.c  usbcfg.c  usbcfg.h
Firmware/Src/Core/: AbstractThread.h  AbstractWritable.h  Assert.h  BaseDynamicThread.cpp  ByteRingBuffer.cpp  ByteRingBuffer.h  CCMemoryAllocator.cpp  CCMemoryAllocator.h  CCMemoryHeap.cpp  CCMemoryHeap.h  Concurrent.h  CpuUsageMonitor.cpp  CpuUsageMonitor.h  CriticalSectionLocker.h  DateTime.cpp  DateTime.h  DateTimeService.h  Event.cpp  Event.h  Flags.h  FunctorThread.h  Future.h  IODevice.cpp  IODevice.h  MemoryStatus.cpp  MemoryStatus.h  Mutex.h  MutexLocker.h  NewDelete.cpp  NewDelete.h  Object.cpp  ObjectMemoryUtilizer.cpp  ObjectMemoryUtilizer.h  RingBuffer.h  RtcBackupRegisters.cpp  Semaphore.h  ServiceEvent.h  Thread.cpp  Thread.h  ThreadRef.h  (+3 more)
Firmware/Src/Drivers/: LogicOutput.cpp
Firmware/Src/FileSystem/: Dir.cpp  Dir.h  File.cpp  File.h  FileInfo.cpp  FileInfo.h  FileInfoReader.cpp  FileInfoReader.h  FileSystem.cpp  FileSystem.h
Firmware/Src/Filters/: Abstract1DFilter.h  LowPassFilter.cpp  LowPassFilter.h  MedianFilter.cpp  MedianFilter.h  MovingAvgFilter.cpp  MovingAvgFilter.h
Firmware/Src/Log/: FileLog.cpp  FileLog.h  MarvieLog.cpp  (+1 more)
Firmware/Support/: LexicalAnalyzer.cpp  Utility.cpp  Utility.h
Firmware/Tests/: BluetoothTest.cpp  EventTest.hpp  FileSystemTest.hpp  FirmwareTransferServiceTest.hpp  GsmPPPTest.hpp  LwipEthernetTest.cpp  LwipEthernetTest.hpp  MLinkTest.cpp  MLinkTest.hpp  MarvieLogSystemTest.hpp  ModbusServerTest.hpp  ModbusTest.hpp  MultipleBRSensorsReaderTest.cpp  MultipleBRSensorsReaderTest.hpp  PPPServerTest.hpp  PingTest.hpp  PowerDownTest.hpp  RawModbusClientTest.hpp  RemoteTerminalTest.hpp  RingBufferTest.cpp  RingBufferTest.hpp  Rs485Test.cpp  Rs485Test.hpp  SdDataUploader.hpp  Sim800AtTest.hpp  SimGsmTcpEcho.cpp  SimGsmTcpEchoTest.hpp  SimGsmUdpStressTest.cpp  SingleBRSensorReaderTest.hpp  ThreadTest.hpp  TimerTest.hpp  UsbSduTest.hpp  XmlParserTest.cpp  XmlParserTest.hpp  fatfs_example.c
Firmware/cmake/: gcc_stm32.cmake
(+365 files in other folders)
